--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,5 +1,6 @@
 ci:
   autoupdate_commit_msg: 'build(deps): pre-commit autoupdate'
+  skip: [hadolint]
 
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
@@ -8,15 +9,18 @@ repos:
       - id: check-yaml
       - id: end-of-file-fixer
       - id: trailing-whitespace
-  - repo: https://github.com/python-jsonschema/check-jsonschema.git
+  - repo: https://github.com/python-jsonschema/check-jsonschema
     rev: 0.23.3
     hooks:
     - id: check-github-workflows
-      name: check github workflows
   - repo: https://github.com/shellcheck-py/shellcheck-py
     rev: v0.9.0.5
     hooks:
       - id: shellcheck
+  - repo: https://github.com/hadolint/hadolint
+    rev: v2.12.0
+    hooks:
+      - id: hadolint
   - repo: https://github.com/commitizen-tools/commitizen
     rev: 3.5.3
     hooks:
