--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -12,26 +12,25 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Get version number
-        run: |
-          TAG_NAME=${{ github.event.release.tag_name }}
-          echo "TAG=${TAG_NAME:1}" >> $GITHUB_ENV
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
 
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          username: coatldev
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
 
       - name: Build and push
         uses: docker/build-push-action@v4
         with:
           context: .
-          file: ./Dockerfile
+          platforms: |
+            linux/amd64
+            linux/arm64
           push: true
           tags: |
-            coatldev/devpi:${{ env.TAG }}
+            coatldev/devpi:${{ github.event.release.tag_name }}
             coatldev/devpi:latest
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
