ci(publish): fix build-push-action context

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -36,7 +36,7 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v5
         with:
-          context: ./${{ steps.dockerfile.outputs.subdir }}
+          context: .
           platforms: |
             linux/amd64
             linux/arm64
