--- a/.github/workflows/pr-build.yml
+++ b/.github/workflows/pr-build.yml
@@ -1,14 +1,15 @@
-name: Lint Dockerfile
+name: Lint and build Dockerfile
 
 on:
-  workflow_dispatch:
   pull_request:
-  push:
     branches:
-      - coatl
+      - 'coatl'
+    paths:
+      - '.github/workflows/pr-build.yml'
+      - 'Dockerfile'
 
 jobs:
-  linter:
+  lint:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repo
@@ -16,3 +17,16 @@ jobs:
 
       - name: Lint Dockerfile
         uses: hadolint/hadolint-action@v3.1.0
+
+  build:
+    runs-on: ubuntu-latest
+    needs: lint
+    steps:
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Build and push
+        uses: docker/build-push-action@v5
+        with:
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
