--- a/.github/workflows/pip-compile.yml
+++ b/.github/workflows/pip-compile.yml
@@ -15,13 +15,14 @@ jobs:
         uses: actions/checkout@v4
 
       - name: coatl-dev-pip-compile
-        uses: coatl-dev/actions/pip-compile/3.11@v0
+        uses: coatl-dev/actions/pip-compile@coatl
         with:
           path: "${{ env.REQUIREMENTS_PATH }}"
+          python-version: '3.11'
 
       - name: Detect changes
         id: git-diff
-        uses: coatl-dev/actions/simple-git-diff@v0
+        uses: coatl-dev/actions/simple-git-diff@coatl
         with:
           path: "${{ env.REQUIREMENTS_PATH }}"
 
