--- a/.github/workflows/pip-compile-upgrade.yml
+++ b/.github/workflows/pip-compile-upgrade.yml
@@ -7,16 +7,11 @@ on:
 
 jobs:
   pip-compile-upgrade:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: coatl-dev-pip-compile-upgrade
-        uses: coatl-dev/actions/pip-compile-upgrade@coatl
-        with:
-          path: requirements
-          python-version: '3.11'
-          gh-token: ${{ secrets.COATL_BOT_GH_TOKEN }}
-          gpg-sign-passphrase: ${{ secrets.COATL_BOT_GPG_PASSPHRASE }}
-          gpg-sign-private-key: ${{ secrets.COATL_BOT_GPG_PRIVATE_KEY }}
+    uses: coatl-dev/workflows/.github/workflows/pip-compile-upgrade.yml@v2
+    with:
+      path: requirements
+      python-version: '3.11'
+    secrets:
+      gh-token: ${{ secrets.COATL_BOT_GH_TOKEN }}
+      gpg-sign-passphrase: ${{ secrets.COATL_BOT_GPG_PASSPHRASE }}
+      gpg-sign-private-key: ${{ secrets.COATL_BOT_GPG_PRIVATE_KEY }}
