--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,5 @@
 ci:
   autoupdate_commit_msg: 'build(deps): pre-commit autoupdate'
-  skip: [hadolint]
 
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
@@ -17,7 +16,7 @@ repos:
     rev: v0.10.0.1
     hooks:
       - id: shellcheck
-  - repo: https://github.com/hadolint/hadolint
-    rev: v2.12.1-beta
+  - repo: https://github.com/coatl-dev/hadolint-coatl
+    rev: 2.12.0.1
     hooks:
       - id: hadolint
