ci(self-test): run on.pull_request

--- a/.github/workflows/self-test.yml
+++ b/.github/workflows/self-test.yml
@@ -1,8 +1,13 @@
 name: self-test
 
 on:
-  push:
   pull_request:
+    branches:
+      - coatl
+    paths:
+      - '.github/workflows/self-test.yml'
+      - 'requirements/**'
+      - 'Dockerfile'
 
 env:
   devpi-password: abcd1234
