--- a/.github/workflows/self-test.yml
+++ b/.github/workflows/self-test.yml
@@ -79,6 +79,7 @@ jobs:
 
       - name: Upload package
         run: |
+          python -m twine register dist/*.tar.gz
           python -m twine upload --verbose dist/*
         env:
           TWINE_USERNAME: ${{ env.devpi-username }}
