--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -6,6 +6,7 @@ on:
       - 'coatl'
     paths:
       - '.github/workflows/publish.yml'
+      - 'requirements/**'
       - 'Dockerfile'
   schedule:
     - cron: '30 20 * * 1,5'
