--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -11,8 +11,11 @@ on:
   schedule:
     - cron: '30 20 * * 1,5'
 
+env:
+  REGISTRY_IMAGE: coatldev/devpi
+
 jobs:
-  semver:
+  tagger:
     runs-on: ubuntu-latest
     outputs:
       version: ${{ steps.tags.outputs.version }}
@@ -40,16 +43,42 @@ jobs:
           echo "major_minor=${MAJOR_MINOR}" >> $GITHUB_OUTPUT
           echo "major=${MAJOR}" >> $GITHUB_OUTPUT
 
-  publish:
-    needs: semver
-    uses: coatl-dev/workflows/.github/workflows/docker-publish-multi-platform.yml@v4
-    with:
-      registry-image: coatldev/devpi
-      metadata-tags: |
-        type=raw,value=${{ needs.semver.outputs.version }}
-        type=raw,value=${{ needs.semver.outputs.major_minor }}
-        type=raw,value=${{ needs.semver.outputs.major }}
-        type=raw,value=latest,enable={{is_default_branch}}
-      dockerhub-username: ${{ vars.DOCKERHUB_USERNAME }}
-    secrets:
-      dockerhub-token: ${{ secrets.DOCKERHUB_TOKEN }}
+  build:
+    needs: tagger
+    runs-on: ubuntu-latest
+    steps:
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+      
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ vars.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Log in to Quay
+        uses: docker/login-action@v3
+        with:
+          registry: quay.io
+          username: ${{ vars.QUAY_USERNAME }}
+          password: ${{ secrets.QUAY_ROBOT_TOKEN }}
+      
+      - name: Build and push
+        uses: docker/build-push-action@v6
+        with:
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+          platforms: linux/amd64,linux/arm64
+          push: true
+          tags: |
+            ${{ env.REGISTRY_IMAGE }}:${{ needs.tagger.outputs.version }}
+            ${{ env.REGISTRY_IMAGE }}:${{ needs.tagger.outputs.major_minor }}
+            ${{ env.REGISTRY_IMAGE }}:${{ needs.tagger.outputs.major }}
+            ${{ env.REGISTRY_IMAGE }}:latest
+            quay.io/${{ env.REGISTRY_IMAGE }}:${{ needs.tagger.outputs.version }}
+            quay.io/${{ env.REGISTRY_IMAGE }}:${{ needs.tagger.outputs.major_minor }}
+            quay.io/${{ env.REGISTRY_IMAGE }}:${{ needs.tagger.outputs.major }}
+            quay.io/${{ env.REGISTRY_IMAGE }}:latest
