--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -45,9 +45,6 @@ jobs:
 
   build:
     needs: tagger
-    permissions:
-      contents: read
-      packages: write
     runs-on: ubuntu-latest
     steps:
       - name: Set up QEMU
@@ -65,8 +62,8 @@ jobs:
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v3
         with:
-          username: ${{ github.repository_owner }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          username: ${{ vars.GHCR_USERNAME }}
+          password: ${{ secrets.GHCR_TOKEN }}
 
       - name: Log in to Quay
         uses: docker/login-action@v3
