ci(pip-compile-upgrade): set pr-delete-branch to 'no'
this will allow pre-commit.ci to run

--- a/.github/workflows/pip-compile-upgrade.yml
+++ b/.github/workflows/pip-compile-upgrade.yml
@@ -11,6 +11,7 @@ jobs:
     with:
       path: requirements
       python-version: '3.12'
+      pr-delete-branch: 'no'
     secrets:
       gh-token: ${{ secrets.COATL_BOT_GH_TOKEN }}
       gpg-sign-passphrase: ${{ secrets.COATL_BOT_GPG_PASSPHRASE }}
